fix spacing and centering

--- a/sass/assets/elr-sass-utilities/components/_cards.scss
+++ b/sass/assets/elr-sass-utilities/components/_cards.scss
@@ -5,8 +5,8 @@
     $bg-color: $main-color,
     $color: $background-color,
     $border-color: null,
-    $padding: 20px,
-    $margin: 20px,
+    $padding: 0,
+    $margin: 0,
     $border-radius: 0
 ) {
     @include elr-em-margin('all', $margin);
@@ -48,6 +48,10 @@
         padding: 0 0 10px;
     }
 
+    figure {
+        width: 100%;
+    }
+
     p {
         @include elr-em-font(14px);
         color: $color;
@@ -73,10 +77,15 @@
         @include elr-clearfix;
     }
 
+    .elr-header-content {
+        padding: to-rems($padding);
+        padding-bottom: 0;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+
     .elr-card-header {
-        .elr-header-content {
-            @include elr-em-padding('all', $padding, $padding, 0, $padding);
-        }
 
         figure {
             margin-top: 0;
@@ -86,7 +95,6 @@
 
             .elr-card-full-image {
                 padding-top: 0;
-                margin: 0 0 -6px;
                 border-radius: $border-radius $border-radius 0 0;
 
                 img {
@@ -97,12 +105,17 @@
     }
 
     .elr-card-body {
-        @include elr-clearfix;
         clear: both;
         flex-grow: 2;
+    }
+
+    .elr-card-body,
+    .elr-card-footer {
+        @include elr-clearfix;
 
         figure {
-            @include elr-em-margin('all', 20px);
+            margin: to-rems(20px);
+            width: auto;
 
             &.elr-card-full-image {
                 margin: 0 0 -6px;
@@ -114,17 +127,6 @@
         @include elr-clearfix;
         @include elr-em-padding('all', 20px, 0, 0, 0);
         border-top: 1px solid darken($bg-color, 10%);
-        // height: 100%;
-        // display: flex;
-        // align-items: flex-end;
-
-        figure {
-            @include elr-em-margin('all', 20px);
-
-            &.elr-card-full-image {
-                margin: 0 0 -6px;
-            }
-        }
 
         @if $border-radius {
             .elr-card-full-image {
@@ -138,26 +140,32 @@
     }
 
     .elr-card-actions {
-        @include elr-em-margin('left', 20);
-        @include elr-em-margin('right', 20);
-        @include elr-em-margin('bottom', 20);
+        @include elr-em-margin('left', 20px);
+        @include elr-em-margin('right', 20px);
+        @include elr-em-margin('bottom', 10px);
         display: flex;
         justify-content: space-between;
-        // flex-wrap: wrap;
         flex: 1;
 
         .elr-button,
         form {
-            max-width: 200px;
+            // max-width: 200px;
             width: 50%;
             display: inline-block;
             flex-basis: 0;
             flex-grow: 1;
             flex-shrink: 1;
-            margin-right: $margin;
+            margin-right: 10px;
 
             &:nth-child(even) {
                 margin-right: 0;
+                margin-left: 10px;
+            }
+
+            &:only-of-type {
+                margin-left: 0;
+                margin-right: 0;
+                max-width: 200px;
             }
         };
 
@@ -182,16 +190,8 @@
 
     .elr-card-thumbnail {
         @include elr-thumbnail(null, 60px, 60px);
-        @include elr-em-margin('all', 0, 20px, 10px, 0);
+        margin-right: to-rems(20px);
         padding: 0;
-        float: left;
-
-        + h2 {
-            @include elr-em-font(30);
-            @include elr-em-padding('all', 30px, 0, 0, 0);
-            margin: 0;
-            line-height: 1;
-        }
     }
 
     .elr-card-thumbnail-round {
@@ -200,6 +200,10 @@
 
     &.card-centered {
         text-align: center;
+
+        .elr-header-content {
+            display: block;
+        }
 
         .elr-card-thumbnail,
         .elr-card-thumbnail-round {
@@ -211,6 +215,10 @@
                 @include elr-em-padding('top', 10px);
                 clear: both;
             }
+        }
+
+        .elr-card-actions {
+            justify-content: center;
         }
     }
 }
